<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81C784"
    android:orientation="vertical"
    tools:context=".View.NuevaComidaActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="Nueva Comida"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:text="@string/tipoComidaDiaria"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_tipo_comida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:checkedButton="@+id/rb_masculino"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_desayuno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:checked="true"
                    android:text="Desayuno" />

                <RadioButton
                    android:id="@+id/rb_almuerzo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:text="Almuerzo" />

                <RadioButton
                    android:id="@+id/rb_merienda"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:text="Merienda" />

                <RadioButton
                    android:id="@+id/rb_cena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/gray"
                    android:text="Cena" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_comida_principal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/comidaPrincipal"
                app:startIconDrawable="@drawable/ic_food">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_comida_principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_comida_secundaria"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/comidaSecundaria"
                app:startIconDrawable="@drawable/ic_food">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_comida_secundaria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_bebida"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/bebida"
                app:startIconDrawable="@drawable/ic_drink">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_bebida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/ingerioPostre"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/sw_postre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_postre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/postre"
                android:visibility="gone"
                app:startIconDrawable="@drawable/ic_cake">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_postre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/tentacionOtroAlimiento"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/sw_otro_alimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_otro_alimento"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A5D6A7"
                android:hint="@string/otroAlimento"
                android:visibility="gone"
                app:startIconDrawable="@drawable/ic_food">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_otro_alimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/quedoConHambre"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/sw_quedo_con_hambre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_guardar_comida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#1B5E20"
                    android:drawableLeft="@drawable/ic_save"
                    android:textColor="@color/white"
                    android:text="Guardar" />

                <Button
                    android:id="@+id/btn_cancelar_comida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#B71C1C"
                    android:drawableLeft="@drawable/ic_cancel"
                    android:textColor="@color/white"
                    android:text="Cancelar" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>